--- a/package.json
+++ b/package.json
@@ -8,13 +8,16 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
-    "eslint": "^3.7.0",
     "chai": "^3.5.0",
+    "eslint": "^3.7.0",
     "mocha": "^3.1.0"
   },
   "dependencies": {
-    "express": "*",
     "body-parser": "*",
+    "cookie-parser": "*",
+    "express": "*",
+    "querystring": "*",
+    "request": "*",
     "socket.io": "^1.7.2"
   },
   "repository": {
