--- a/package.json
+++ b/package.json
@@ -4,19 +4,25 @@
   "description": "Music Recommendation Service for Exploring Artists and Sharing Music with People",
   "main": "index.js",
   "scripts": {
+    "build": "node ./node_modules/gulp/bin/gulp.js",
     "start": "node server/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.14.0",
     "chai": "^3.5.0",
+    "cookie-parser": "*",
     "eslint": "^3.7.0",
-    "mocha": "^3.1.0"
+    "gulp": "*",
+    "gulp-babel": "*",
+    "gulp-browserify": "*",
+    "gulp-sourcemaps": "*",
+    "mocha": "^3.1.0",
+    "querystring": "*"
   },
   "dependencies": {
     "body-parser": "*",
-    "cookie-parser": "*",
     "express": "*",
-    "querystring": "*",
     "request": "*",
     "socket.io": "^1.7.2"
   },
